# pyrit-redteaming-claude

./: .gitignore  .pre-commit-config.yaml  2026-06-15-costing-dolphinx1405b.md  CATALOG_NOTES.md  Dockerfile  ENRICHMENT_METHODOLOGY.md  README.md  agent_vuln_injection_sheet.md  agentic_grading_design.md  attacker-llm-selection-rationale.md  claude_code_implementation_prompt.md  costing-dolphin-x1-405b.md  crescendo.py  grading_paradigms_explained_for_governance.md  otel_genai_attribute_list.txt  oteltraceschemanotes.md  persuasion_angles.py  promptfoo_plugins_catalog_1.xlsx  promptfoo_plugins_catalog_enriched.xlsx  promptfoo_plugins_catalog_enriched_v2.xlsx  promptfoo_plugins_catalog_enriched_v3.xlsx  promptfoo_plugins_catalog_genai_trace.xlsx  pyproject.toml  pyritattacksbeginnerguide.md  pyritattacksguide.html  requirements-dev.txt  requirements.txt  todo_agentic.txt
.claude/: settings.local.json
agentic_redteam/: __init__.py  config.py  logging_config.py  orchestrator.py  progress.py  records.py  sourcing.py  store.py
agentic_redteam/catalog/: grouping.py  loader.py  models.py
docs/: presets-flattening-analysis.md
notebooks/: pyrit_redteam_poc.ipynb
promptfoo_plugins_catalog_genai_trace/: agent_trace_schema_gen_ai.md  enrichment_methodology.md  plugins.md
scripts/: catalog_stats.py  docker_serve.sh  dump_xlsx.py  gen_pyrit_taxonomy.py  run_one.py  run_report.py  serve.py
tests/: test_config.py  test_notebook.py  test_orchestrator.py  test_pipeline_integration.py  test_progress.py  test_records.py  test_sourcing.py  test_store.py
tests/web/: test_app.py  (+5 more)
(+76 files in other folders)
