[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-redteam"
version = "0.1.0"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["agentic_redteam*"]

[tool.setuptools.package-data]
"agentic_redteam.catalog" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
